Criada pagina Home, bem como opção para adicionar um novo projeto.

--- a/login.html
+++ b/login.html
@@ -12,10 +12,10 @@
         <li><a href="register.html">Registrar Novo Utilizador</a></li>
       </ul>
     </nav>
-    <h1>Login</h1>
+    <h1>Insira suas credenciais</h1>
     <div>
-      <input type="text" name="username" placeholder="Insira um Nome de Utilizador">
-      <input type="password" name="password" placeholder="Insira uma palavra-passe">
+      <input type="text" name="username" placeholder="Nome de Utilizador">
+      <input type="password" name="password" placeholder="Palavra-passe">
       <button type="button" name="login_btn" onclick="login()">Entrar</button>
     </div>
     <p id="info"></p>
