--- a/register.html
+++ b/register.html
@@ -13,10 +13,11 @@
       </ul>
     </nav>
     <h1>Registro de Utilizadores</h1>
+    <p>Insira os dados abaixo:</p>
     <div>
-      <input type="text" name="username" placeholder="Insira um Nome de Utilizador">
-      <input type="text" name="name" placeholder="Insira seu nome completo">
-      <input type="password" name="password" placeholder="Insira uma palavra-passe">
+      <input type="text" name="username" placeholder="Nome de Utilizador">
+      <input type="text" name="name" placeholder="Nome completo">
+      <input type="password" name="password" placeholder="Palavra-passe">
       <button type="button" name="register_btn" onclick="addUser()">Registrar</button>
     </div>
     <p id="info"></p>
