Adicionada mensagem na tabela Meus projetos quando não há nenhum projeto.

--- a/home.html
+++ b/home.html
@@ -34,9 +34,9 @@
           <th>Nome</th>
           <th>% tarefas concluidas</th>
           <th>Membros</th>
-          <th></th>
+          <!-- <th></th> -->
         </tr>
-        <tr>
+        <!-- <tr>
           <td>00</td>
           <td>teste 1</td>
           <td>30%</td>
@@ -44,7 +44,8 @@
             <li>alex</li>
           </ul></td>
           <td><button type="button" name="button">Editar</button></td>
-        </tr>
+        </tr> -->
+        <!-- <tr calspan='5'>Você ainda não participa de nenhum projeto.</tr> -->
       </table>
     </div>
 
