Protegidos os projetos/tarefas para apenas os membros possam ver/editar

--- a/project.html
+++ b/project.html
@@ -43,5 +43,6 @@
         </tr>
       </table>
     </div>
+    <br><br><br><br><footer>Atenção: Apenas a pessoa a quem foi assignada a tarefa pode iniciar/finalizar a mesma.</footer>
   </body>
 </html>
